--- a/public/register.html
+++ b/public/register.html
@@ -40,6 +40,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="register">Seniority</a>
+                    <a id="this_user" style="font-size: 18px;" class="navbar-brand">fuck you</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
@@ -47,6 +48,7 @@
                         <li><a href="/register">home</a></li>
                         <li><a href="/map">Find Help</a></li>
                         <li><a href="/help">Help</a></li>
+                        <li><a id="login_status" onclick="logMeOut()"></a></li>
                         <li><a></a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right socials">
@@ -272,33 +274,28 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
-            var socket = io();
-             window.onload = function() {
-                axios.get('/auth/me', function(req, res, next){
-                    let user = res.data;
-                    return user;
-                })
-                        .then(user =>
-                {
-                    if(user)
-                {
-                    $("#loginLogout").html('Login');
-                }
-                    else
-                {
-                    $("#loginLogout").html('Logout');
-                }
-                });
-            };
+            var socket = io(window.location.origin);
+             window.onload = function () {
+                    axios.get('/auth/me', (req, res, next) => (res.data))
+                        .then(user => {
+                            if (user.data.name) {
+                                console.log(user.data.name);
+                                $("#this_user").html('Welcome, ' + user.data.name);
+                                $("#login_status").html("Logout");
+                            }
+                            else {
+                                $("#this_user").html('You are not logged in bitch');
+                                $("#login_status").html("Login");
+                            }
+                        });
+                };
 
             function logMeOut()
             {
-                let stat = document.getElementById("loginLogout").innerHTML;
-                if(stat == "Logout")
-                    axios.post('/auth/logout')
-                            .then(() => {
-                                window.location.href = "/login"
-                    })
+                axios.post('/auth/logout')
+                        .then(() => {
+                            window.location.href = "/login"
+                })
             }
             function Helper()
             {
