--- a/public/map.html
+++ b/public/map.html
@@ -46,6 +46,7 @@
                 <span class="icon-bar"></span>
             </button>
                 <a class="navbar-brand" href="register">Seniority</a>
+                <a id="this_user" style="font-size: 18px;" class="navbar-brand">fuck you</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
@@ -53,6 +54,7 @@
                     <li><a href="/register">home</a></li>
                     <li><a href="/map">Find Help</a></li>
                     <li><a href="/help">Help</a></li>
+                    <li><a id="login_status" onclick="logMeOut()"></a></li>
                     <li><a></a></li>
 
 
@@ -263,6 +265,19 @@
     <script src="js/headroom.js" type="text/javascript"></script>
     <script>
         $(window).on('load', function () {
+             axios.get('/auth/me', (req, res, next) => (res.data))
+                .then(user => {
+                    if (user.data.name) {
+                        console.log(user.data.name);
+                        $("#this_user").html('Welcome, ' + user.data.name);
+                        $("#login_status").html("Logout");
+                    }
+                    else {
+                        $("#this_user").html('You are not logged in bitch');
+                        $("#login_status").html("Login");
+                    }
+                });
+                    
             axios.get('/helper/all/39.9625980/-76.7277450').then(function (response) {
                 console.log(response);
                 response.data.forEach(function (geo) {
