--- a/public/helper.html
+++ b/public/helper.html
@@ -244,7 +244,7 @@
                     $("#login_status").html("Logout");
                 }
                 else {
-                    $("#this_user").html('You are not logged in bitch');
+                    $("#this_user").html('You are not logged in');
                     $("#login_status").html("Login");
                 }
             });
